CB-19643 Made storage cost estimate more accurate, by replacing magic constant with region and storage type specific magic values