@@ -11,23 +11,21 @@ import static com.sequenceiq.cloudbreak.recipe.util.RecipeTestUtil.generalCluste
 import java.io.File;
 import java.io.IOException;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
 
 import com.google.common.collect.Sets;
 import com.sequenceiq.cloudbreak.api.endpoint.v4.database.base.DatabaseType;
-import com.sequenceiq.cloudbreak.domain.RdsSslMode;
 import com.sequenceiq.cloudbreak.domain.stack.cluster.host.HostGroup;
 import com.sequenceiq.cloudbreak.dto.LdapView;
 import com.sequenceiq.cloudbreak.recipe.testrepeater.TestFile;
 import com.sequenceiq.cloudbreak.template.TemplatePreparationObject;
 import com.sequenceiq.cloudbreak.template.TemplatePreparationObject.Builder;
 import com.sequenceiq.cloudbreak.template.filesystem.StorageLocationView;
-import com.sequenceiq.cloudbreak.template.filesystem.TemplateCoreTestUtil;
 import com.sequenceiq.cloudbreak.template.filesystem.adls.AdlsFileSystemConfigurationsView;
 import com.sequenceiq.cloudbreak.template.filesystem.adlsgen2.AdlsGen2FileSystemConfigurationsView;
 import com.sequenceiq.cloudbreak.template.filesystem.gcs.GcsFileSystemConfigurationsView;
@@ -49,8 +47,7 @@ class RecipeModulTestModelProvider {
     static TemplatePreparationObject testTemplatePreparationObject() {
         return getPreparedBuilder("master")
                 .withBlueprintView(generalBlueprintView("", "2.6", "HDP"))
-                .withRdsViews(Set.of(TemplateCoreTestUtil.rdsViewProvider()
-                        .getRdsView(rdsConfigWithoutCluster(DatabaseType.HIVE, RdsSslMode.DISABLED))))
+                .withRdsConfigs(new HashSet<>(Collections.singleton(rdsConfigWithoutCluster(DatabaseType.HIVE))))
                 .build();
     }
 
@@ -154,28 +151,14 @@ class RecipeModulTestModelProvider {
     static TemplatePreparationObject testTemplateWithDruidRds() {
         return getPreparedBuilder("master")
                 .withBlueprintView(generalBlueprintView("", "2.6", "HDP"))
-                .withRdsViews(
-                        Sets.newHashSet(
-                                rdsConfigWithoutCluster(DatabaseType.DRUID, RdsSslMode.DISABLED),
-                                rdsConfigWithoutCluster(DatabaseType.HIVE, RdsSslMode.DISABLED))
-                            .stream()
-                            .map(e -> TemplateCoreTestUtil.rdsViewProvider().getRdsView(e))
-                            .collect(Collectors.toSet())
-                )
+                .withRdsConfigs(Sets.newHashSet(rdsConfigWithoutCluster(DatabaseType.DRUID), rdsConfigWithoutCluster(DatabaseType.HIVE)))
                 .build();
     }
 
     static TemplatePreparationObject testTemplateWhenSharedServiceIsOnWithRangerAndHiveRds() {
         return getPreparedBuilder("master")
                 .withBlueprintView(generalBlueprintView("", "2.6", "HDP"))
-                .withRdsViews(
-                        Sets.newHashSet(
-                                rdsConfigWithoutCluster(DatabaseType.RANGER, RdsSslMode.DISABLED),
-                                rdsConfigWithoutCluster(DatabaseType.HIVE, RdsSslMode.DISABLED))
-                                .stream()
-                                .map(e -> TemplateCoreTestUtil.rdsViewProvider().getRdsView(e))
-                                .collect(Collectors.toSet())
-                )
+                .withRdsConfigs(Sets.newHashSet(rdsConfigWithoutCluster(DatabaseType.RANGER), rdsConfigWithoutCluster(DatabaseType.HIVE)))
                 .withSharedServiceConfigs(datalakeSharedServiceConfig())
                 .build();
     }
@@ -183,7 +166,7 @@ class RecipeModulTestModelProvider {
     static TemplatePreparationObject testTemplateWithNoSharedServiceAndRds() {
         return getPreparedBuilder("master")
                 .withBlueprintView(generalBlueprintView("", "2.6", "HDP"))
-                .withRdsViews(new HashSet<>())
+                .withRdsConfigs(new HashSet<>())
                 .withSharedServiceConfigs(null)
                 .build();
     }
@@ -191,12 +174,7 @@ class RecipeModulTestModelProvider {
     static TemplatePreparationObject testTemplateWhenSharedServiceIsOnWithOnlyHiveRds() {
         return getPreparedBuilder("master")
                 .withBlueprintView(generalBlueprintView("", "2.6", "HDP"))
-                .withRdsViews(
-                        Sets.newHashSet(rdsConfigWithoutCluster(DatabaseType.HIVE, RdsSslMode.DISABLED))
-                                .stream()
-                                .map(e -> TemplateCoreTestUtil.rdsViewProvider().getRdsView(e))
-                                .collect(Collectors.toSet())
-                )
+                .withRdsConfigs(Sets.newHashSet(rdsConfigWithoutCluster(DatabaseType.HIVE)))
                 .withSharedServiceConfigs(datalakeSharedServiceConfig())
                 .build();
     }
@@ -204,12 +182,7 @@ class RecipeModulTestModelProvider {
     static TemplatePreparationObject testTemplateWhenSharedServiceIsOnWithOnlyRangerRds() {
         return getPreparedBuilder("master")
                 .withBlueprintView(generalBlueprintView("", "2.6", "HDP"))
-                .withRdsViews(
-                        Sets.newHashSet(rdsConfigWithoutCluster(DatabaseType.RANGER, RdsSslMode.DISABLED))
-                                .stream()
-                                .map(e -> TemplateCoreTestUtil.rdsViewProvider().getRdsView(e))
-                                .collect(Collectors.toSet())
-                )
+                .withRdsConfigs(Sets.newHashSet(rdsConfigWithoutCluster(DatabaseType.RANGER)))
                 .withSharedServiceConfigs(datalakeSharedServiceConfig())
                 .build();
     }
@@ -217,12 +190,7 @@ class RecipeModulTestModelProvider {
     static TemplatePreparationObject testTemplateWhenBlueprintVersionIs25() {
         return getPreparedBuilder("master")
                 .withBlueprintView(generalBlueprintView("", "2.5", "HDP"))
-                .withRdsViews(
-                        Sets.newHashSet(rdsConfigWithoutCluster(DatabaseType.RANGER, RdsSslMode.DISABLED))
-                                .stream()
-                                .map(e -> TemplateCoreTestUtil.rdsViewProvider().getRdsView(e))
-                                .collect(Collectors.toSet())
-                )
+                .withRdsConfigs(Sets.newHashSet(rdsConfigWithoutCluster(DatabaseType.RANGER)))
                 .withSharedServiceConfigs(datalakeSharedServiceConfig())
                 .build();
     }
@@ -232,13 +200,7 @@ class RecipeModulTestModelProvider {
                 .withGeneralClusterConfigs(generalClusterConfigs())
                 .withBlueprintView(generalBlueprintView("", "2.6", "HDP"))
                 .withSharedServiceConfigs(datalakeSharedServiceConfig())
-                .withRdsViews(
-                        Sets.newHashSet(rdsConfigWithoutCluster(DatabaseType.RANGER, RdsSslMode.DISABLED),
-                                rdsConfigWithoutCluster(DatabaseType.HIVE, RdsSslMode.DISABLED))
-                                .stream()
-                                .map(e -> TemplateCoreTestUtil.rdsViewProvider().getRdsView(e))
-                                .collect(Collectors.toSet())
-                )
+                .withRdsConfigs(Sets.newHashSet(rdsConfigWithoutCluster(DatabaseType.RANGER), rdsConfigWithoutCluster(DatabaseType.HIVE)))
                 .withHostgroups(hostNames.length == 0 ? getHostGroups("master", "worker", "compute") : getHostGroups(hostNames));
     }
 
